--- a/test1/src/main/resources/application.properties
+++ b/test1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-## db 정보
+## db ì ë³´
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1522/xe
 spring.datasource.username=system
@@ -23,3 +23,9 @@ mybatis.mapper-locations: mybatis-mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 # package model
 mybatis.type-aliases-package=com.example.test1.model
+
+# 포트 번호 변경
+server.port : 8080
+
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
