--- a/test1/src/main/resources/application.properties
+++ b/test1/src/main/resources/application.properties
@@ -29,3 +29,6 @@ server.port : 8080
 
 spring.servlet.multipart.maxFileSize=50MB
 spring.servlet.multipart.maxRequestSize=50MB
+
+client_id="ab0712832e5f0d758a556f91ad8a454b"
+redirect_uri=콜백 주소
